--- a/index.html
+++ b/index.html
@@ -3,11 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="Assets/css/main.css">
     <title>GitHub</title>
 </head>
 <body>
     
-<h1 class="text-center">Olá Git</h1>
+<h1 class="text-center display">Olá Git</h1>
 
 <p class="text-center">nova informação</p>
     <p> este paragrafo foi criado no Git </p>
